[package]
name = "rustcoin"
description = "Bitcoin in rust"
version = "0.1.0"
authors = ["SkyBeastMC <skybeastmc@gmail.com>"]
license = "MIT"
repository = "https://github.com/SkyBeastMC/rust-bitcoin"
keywords = ["bitcoin"]
categories = ["cryptography"]

[dependencies]
rand = "0.5"
lazy_static = "1.1.0"
arrayvec = "0.4.7"
hex-literal = "0.1.1"
hex = "0.3.2"
generic-array = "0.12.0"
secp256k1 = "0.5.6"
digest = "0.8.0"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
base58 = "0.1.0"
hmac = "0.7.0"
pbkdf2 = "0.3.0"
byteorder = "1.2.6"
